<?xml version="1.0"?>
<package format="2">
  <name>aist_gazebo</name>
  <version>0.0.1</version>
  <description>
      Gazebo files, based on the Universal UR5/10 robot arm gazebo module.
  </description>

  <author>Yuma Hijioka</author>
  <author email="yuma.hijioka@aist.go.jp">Yuma Hijioka</author>
  <maintainer email="yuma.hijioka@aist.go.jp">Yuma Hijioka</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/ur_gazebo</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <export>
    <gazebo_ros gazebo_media_path="${prefix}" />
  </export>
</package>
