<?xml version="1.0"?>
<package format="2">
  <name>o2as_easy_handeye</name>
  <version>1.0.0</version>
  <description>The o2as_easy_handeye package</description>

  <maintainer email="t.ueshiba@aist.go.jp">Toshio UESHIBA</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>

  <exec_depend>tf</exec_depend>

  <export>
  </export>
</package>
