<?xml version="1.0"?>
<package format="2">
  <name>aist_localization</name>
  <version>1.0.0</version>
  <description>The aist_localization package</description>

  <maintainer email="t.ueshiba@aist.go.jp">Toshio UESHIBA</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>nodelet</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>ddynamic_reconfigure</depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <build_depend>actionlib</build_depend>
  <exec_depend>actionlib</exec_depend>
  <depend>geometry_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_description.xml"/>
  </export>
</package>
