<?xml version="1.0"?>
<package format="2">
  <name>aist_routines</name>
  <version>0.0.0</version>
  <description>The aist_routines package</description>

  <maintainer email="yuma.hijioka@aist.go.jp">Yuma Hijioka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
