<?xml version="1.0"?>
<package format="2">
  <name>o2as_aruco_marker_detection</name>
  <version>0.0.0</version>
  <description>The o2as_aruco_marker_detection package</description>

  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>std_srvs</depend>
  <depend>cv_bridge</depend>
  <depend>aruco</depend>
  <depend>aruco_ros</depend>
  <exec_depend>tf</exec_depend>

  <export>
  </export>
</package>
