<?xml version="1.0"?>
<package>
	<name>o2as_assembly_task</name>
	<version>0.0.0</version>
	<description>the o2as_assembly_task</description>

	<author email="yoshiya_shibata@omron.co.jp">Yoshiya Shibata</author>
	<maintainer email="yoshiya_shibata@omron.co.jp">Yoshiya Shibata</maintainer>

	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<run_depend>roscpp</run_depend>

	<build_depend>geometry_msgs</build_depend>
	<run_depend>geometry_msgs</run_depend>

	<build_depend>o2as_vision</build_depend>
	<run_depend>o2as_vision</run_depend>

	<build_depend>o2as_skills</build_depend>
	<run_depend>o2as_skills</run_depend>

	<export>
	</export>
</package>
